# skillberry-agent

./: .env.example  .gitignore  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  main.py  pyproject.toml  requirements.txt  tools_agentic_graph.py
.github/workflows/: pull_request.yml  push.yml
.mk/: dev.mk  development.mk  local.mk  process.mk
agents/: agentic_graph.py  all_tools.py  code_missing_tools.py  execute_tools_with_parameters.py  find_existing_tools.py  find_useful_tools.py  mcp_tools.py  remote_tools_wrapper.py  state.py  trajectory_manager.py  vmcp_server_manager.py
config/: config.py  config_structure.py  config_ui.py  env_loader.py  generated_tools_count.py  test_config_integration.py  test_env_loader.py
data_model/: messages.py  virtual_mcp_server.py
docs/: ports-and-env-vars.md
fast_api/: api_server.py  git_version.py  test_api_server.py  test_server.py
llm/: common.py
shared/python/skillberry_agent_lib/: MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
shared/python/skillberry_agent_lib/contrib/examples/: minimal_agent.py
shared/python/skillberry_agent_lib/contrib/examples/skills/calculate/: SKILL.md
shared/python/skillberry_agent_lib/contrib/examples/skills/calculate/scripts/: calculate.py
shared/python/skillberry_agent_lib/skillberry_agent_lib/: __init__.py  langgraph_nodes.py  mcp_interceptor.py  prompt.py  skill_manager.py  skillberry_api.py  skillberry_store.py  test_prompt.py  test_skill_manager.py  test_trajectory_manager.py  test_vmcp_server_manager.py  trajectory_manager.py  utils.py  vmcp_server_manager.py
shared/python/skillberry_agent_lib/skillberry_agent_lib/data_model/: __init__.py  messages.py  virtual_mcp_server.py
shared/python/skillberry_agent_lib/tests/: __init__.py  utils.py
shared/python/skillberry_agent_lib/tests/e2e/: __init__.py  fixtures.py
tests/e2e/: test_e2e.py
tools/: graph_visualization.py
utils/: skillberry_api.py  tools_maker_api.py  tools_service_api.py  utils.py
