[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-agent"
version = "0.1.0"
description = "Skillberry Agent service with Skillberry Store integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.16.0",
    "python-dotenv",
    "httpx",
    "pytest>=8.3.4",
    "pytest-asyncio",
    "colorlog>=6.9.0",
    "dash>=2.9.3",
    "Flask>=3.1.0",
    "ipython>=8.12.3",
    "skillberry-agent-lib",
    "skillberry-store-sdk @ git+https://github.com/skillberry-ai/skillberry-store.git#subdirectory=client/python/skillberry_store_sdk",
    "toml-cli",
    "llm-switchboard>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-asyncio",
]

[tool.uv.sources]
#skillberry-store-sdk = { path = "../skillberry-store/client/python/skillberry_store_sdk", editable = true }
skillberry-agent-lib = { path = "shared/python/skillberry_agent_lib", editable = true }

[tool.setuptools]
packages = ["agents", "config", "fast_api", "llm", "tools", "utils"]
