[tool.poetry]
name = "skillberry_agent_lib"
version = "1.0.0"
description = "Skillberry Agent Library - Core utilities for Skillberry agents"
authors = ["Skillberry Team"]
license = "NoLicense"
readme = "README.md"
keywords = ["skillberry", "agent", "mcp", "trajectory"]
include = ["skillberry_agent_lib/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">= 2.11.3"
requests = ">= 2.32.3"
typing-extensions = ">= 4.13.2"
langchain = ">= 0.3.25"
langchain-core = ">= 0.3.59"
langgraph = ">= 0.4.3"
langchain-mcp-adapters = ">= 0.2.1"
skillberry-store-sdk = { git = "https://github.com/skillberry-ai/skillberry-store.git", subdirectory = "client/python/skillberry_store_sdk" }

[tool.poetry.dev-dependencies]
pytest = ">= 7.2.1"
pytest-cov = ">= 2.8.1"
flake8 = ">= 4.0.0"
mypy = ">= 1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = [
  "skillberry_agent_lib",
  "tests",
]

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true